# prct-prjcts

./: README.md
allocators/LinearAllocator/: Allocator.h  main.cpp
allocators/PoolAllocator-C-/: allocator.c  allocator.h  main.c
allocators/PoolAllocator-Cpp-/: PoolAllocator.cpp  PoolAllocator.h  main.cpp
client-server/libapplic/: CMakeLists.txt  README.md
client-server/libapplic/Client/: CMakeLists.txt  Global.h  Menu.h  Session.h  main.cpp
client-server/libapplic/Client/Source/: Menu.cpp  Session.cpp
client-server/libapplic/Server/: Author.h  Book.h  Buffs.h  CMakeLists.txt  Client.h  ClientSession.h  DataBase.h  Global.h  Order.h  Person.h  Server.h  Sha256.h  main.cpp
client-server/libapplic/Server/Source/: Author.cpp  Book.cpp  Buffs.cpp  Client.cpp  DataBase.cpp  Order.cpp  Person.cpp  Server.cpp  SessionLib.cpp  Sha256.cpp
client-server/sendfile/: CMakeLists.txt
client-server/sendfile/Client/: CMakeLists.txt  main.cpp
client-server/sendfile/Server/: CMakeLists.txt  main.cpp
raycasting/: CMakeLists.txt  main.cpp
